name:                brick-devlunch
version:             0.1
synopsis:            Brick devlunch project
license:             BSD3
license-file:        LICENSE
author:              Me <me@example.com>
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable brick-devlunch
  hs-source-dirs:      programs, src
  main-is:             Main.hs
  other-modules:       Model
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       brick,
                       lens,
                       linear
