name:                brick-devlunch
version:             0.1
synopsis:            Brick devlunch project
license:             BSD3
license-file:        LICENSE
author:              Me <me@example.com>
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable brick-devlunch
  hs-source-dirs:      programs, src
  main-is:             Main.hs
  ghc-options:         -threaded -Wall
  other-modules:       Model
  default-language:    Haskell2010
  extra-libraries:     ivy
  build-depends:       base,
                       brick,
                       lens,
                       linear,
                       vty,
                       random,
                       stm,
                       optparse-applicative
